--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <title>ok.</title>
 </head>
 <body>
-    <form>
+    <form action="login" method="post">
         <label>Name</label>
-        <input type="text" placeholder="name">
+        <input type="text" name="username" placeholder="name">
         <label>Password</label>
-        <input type="text" placeholder="password">
+        <input type="text" name="password" placeholder="password">
         <button type="submit">Ok</button>
     </form>
 </body>
